--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -25,6 +25,6 @@ jobs:
       - name: Pull image from docker hub
         run: docker pull patilprathamesh/nodejs-app:latest
       - name: Delete old container
-        run: docker rm -f nodejs-app-container || true
+        run: docker rm -f nodejs-app-container
       - name: Run Docker Container
         run: docker run -d -p 9000:9000 --name nodejs-app-container -e MONGO_URI=${{ secrets.MONGO_URI }} patilprathamesh/nodejs-app
